# apitester

./: Cargo.toml  LICENSE  sample.json
src/: api.rs  apirunner.rs  app.rs  main.rs  newapp.rs  ui.rs
src/ui/: resultview.rs
